# paveloom.dev

./: .build.yml  .eslintrc.yml  .gitignore  .gitlab-ci.yml  .htaccess  .woodpecker.yml  Dockerfile  README.md  compose.yaml  config.json  config.toml  flake.nix  flex-test.html  flex.html  index.html  mkdocs.yml  package.json  projects.html  pyproject.toml  site.code-workspace  version
.forgejo/workflows/: Build & Deploy.yml
.github/scripts/: build.bash
.github/workflows/: Build & Deploy.yml  Build Image.yml  Test Build.yml  deploy.yaml
content/: README.md  _index.md  flex.md  git.md  index.md  libgen.md  pgp.asc  sitemap.md
content/assets/: extra.css  pgp.asc  pgp.txt  shortcuts.js
content/blog/: README.md  ffmpeg-notes.md  how-to-access-a-local-server-running-inside-wsl-2.md  how-to-create-a-custom-locale-on-fedora.md  how-to-create-a-samba-share.md  how-to-host-a-vpn-using-wireguard.md  how-to-install-spotify-without-ads-on-linux.md  how-to-manage-websites-or-services-under-a-handshake-domain.md  how-to-transcode-a-video-for-lbry-before-uploading.md
content/journal/: README.md
content/notes/: Adding_a_user_to_a_group.md  Autostart.md  Azahar.md  Bash.md  Bash_Brace_expansion.md  Bash_Parameter_expansion.md  (+70 more)
content2/: _index.md  git.md
knowledge/: book.toml
nginx/: default.conf
old/: libgen.html
pensieve/: book.toml
sass/: 404.scss  _base.scss  _code.scss  _home.scss  _search.scss  _variables.scss  _wiki.scss  _wiki_page.scss  base.scss  index.scss  site.scss
scripts/: build.bash  nix-build.bash
src/: index.css  index.html  index.js
static/: search.js
templates/: 404.html  base.html  index.html  macros.html  notes.html  page.html  pages.html  section.html  site.html  wiki.html  wiki_page.html
themes/: dark.json  light.json
(+597 files in other folders)
