[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pavel Sobolev", email = "paveloom@riseup.net"},
]
dependencies = [
    "mkdocs-material==8.5.10",
    "mkdocs-git-revision-date-localized-plugin==1.1.0",
    "mkdocs-literate-nav==0.5.0",
    "mkdocs-section-index==0.3.4",
    "mkdocs-exclude-search==0.6.4",
    "mkdocs-minify-plugin==0.6.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
mkdocs = "mkdocs"
