[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pavel Sobolev", email = "paveloom@riseup.net"},
]
dependencies = [
    "mkdocs-material==9.0.12",
    "mkdocs-git-revision-date-localized-plugin==1.1.0",
    "mkdocs-literate-nav==0.6.0",
    "mkdocs-section-index==0.3.5",
    "mkdocs-minify-plugin==0.6.2",
    "mkdocs-blogging-plugin==2.2.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
mkdocs = "mkdocs"
